--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@greenton/react-sdk",
+  "name": "@greenton/sdk-react",
   "version": "0.0.1",
-  "description": "Official GreenTON JS SDK",
+  "description": "Official GreenTON React SDK",
   "main": "src/index.ts",
   "scripts": {
     "build": "babel src -d dist",
