--- a/package.json
+++ b/package.json
@@ -1,58 +1,37 @@
 {
-  "name": "@greenton/sdk-react",
-  "version": "0.0.1",
-  "description": "Official GreenTON React SDK",
-  "main": "src/index.ts",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GreenTON-global/sdk-react.git"
-  },
-  "author": "GreenTON Global",
-  "scripts": {
-    "build": "babel src -d dist",
-    "test": "jest --passWithNoTests",
-    "prepublishOnly": "npm run build"
-  },
-  "keywords": [
-    "react",
-    "sdk",
-    "greenton"
-  ],
-  "license": "MIT",
-  "dependencies": {
-    "@orbs-network/ton-access": "^2.3.3",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@ton/core": "^0.56.3",
-    "@ton/ton": "^13.11.2",
-    "@tonconnect/ui-react": "^2.0.5",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.101",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "prettier": "^3.3.2",
-    "prettier-plugin-organize-imports": "^4.0.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "bugs": {
-    "url": "https://github.com/GreenTON-global/sdk-react/issues"
-  },
-  "homepage": "https://github.com/GreenTON-global/sdk-react#readme"
+    "name": "sdk-react",
+    "version": "1.0.0",
+    "description": "Official GreenTON React SDK",
+    "main": "dist/index.js",
+    "scripts": {
+      "build:dev": "rollup -c --environment NODE_ENV:development",
+      "build": "rollup -c --environment NODE_ENV:production"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/GreenTON-global/sdk-react.git"
+    },
+    "keywords": [
+        "greenton",
+        "react",
+        "npm"
+    ],
+    "author": "GreenTON Global",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/GreenTON-global/sdk-react/issues"
+    },
+    "homepage": "https://github.com/GreenTON-global/sdk-react#readme",
+    "devDependencies": {
+        "@rollup/plugin-terser": "^0.4.4",
+        "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+        "prettier": "^3.3.3",
+        "prettier-plugin-organize-imports": "^4.0.0",
+        "rollup": "^4.18.1",
+        "typescript": "^5.5.3"
+    },
+    "dependencies": {
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    }
 }
