--- a/package.json
+++ b/package.json
@@ -1,37 +1,41 @@
 {
-    "name": "sdk-react",
-    "version": "1.0.0",
-    "description": "Official GreenTON React SDK",
-    "main": "dist/index.js",
-    "scripts": {
-      "build:dev": "rollup -c --environment NODE_ENV:development",
-      "build": "rollup -c --environment NODE_ENV:production"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/GreenTON-global/sdk-react.git"
-    },
-    "keywords": [
-        "greenton",
-        "react",
-        "npm"
-    ],
-    "author": "GreenTON Global",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/GreenTON-global/sdk-react/issues"
-    },
-    "homepage": "https://github.com/GreenTON-global/sdk-react#readme",
-    "devDependencies": {
-        "@rollup/plugin-terser": "^0.4.4",
-        "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-        "prettier": "^3.3.3",
-        "prettier-plugin-organize-imports": "^4.0.0",
-        "rollup": "^4.18.1",
-        "typescript": "^5.5.3"
-    },
-    "dependencies": {
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1"
-    }
+  "name": "@greenton/sdk-react",
+  "version": "1.0.0",
+  "description": "Official GreenTON React SDK",
+  "type": "module",
+  "main": "dist/index.js",
+  "scripts": {
+    "build:dev": "rollup -c --environment NODE_ENV:development",
+    "build": "rollup -c --environment NODE_ENV:production"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GreenTON-global/sdk-react.git"
+  },
+  "keywords": [
+    "greenton",
+    "react",
+    "npm"
+  ],
+  "author": "GreenTON Global",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/GreenTON-global/sdk-react/issues"
+  },
+  "homepage": "https://github.com/GreenTON-global/sdk-react#readme",
+  "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.0.0",
+    "rollup": "^4.18.1",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "@ton/core": "^0.56.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
