--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.1.2",
   "description": "Official GreenTON React SDK",
   "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "exports": {
+    ".": "./dist/*.js"
+  },
   "scripts": {
     "build:dev": "rollup -c --environment NODE_ENV:development",
     "build": "rollup -c --environment NODE_ENV:production"
@@ -25,6 +26,7 @@
   },
   "homepage": "https://github.com/GreenTON-global/sdk-react#readme",
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
