--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,8 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies and build 🔧
         run: npm ci
+      - name: Build
+        run: npm run build
       - name: Publish package on NPM 📦
         run: npm publish --access public
         env:
