--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,9 +13,9 @@ jobs:
         with:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
-      - name: Install dependencies and build 🔧
+      - name: Install dependencies 🔧
         run: npm ci
-      - name: Build
+      - name: Build 🔧
         run: npm run build
       - name: Publish package on NPM 📦
         run: npm publish --access public
